// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interpreting Protos should load the Comments proto 1`] = `
"type Query {
  \\"\\"\\"
  Comment 2: This is a comment with initial slash star and final star slash (all on one line)
  \\"\\"\\"
  foo_SampleService_GetSample(input: foo_GetSampleRequest_Input): foo_SampleResponse
  foo_SampleService_connectivityState(tryToConnect: Boolean): ConnectivityState
}

\\"\\"\\"
Comment 5: This is a comment on one line, delimiters slash star star at beginning of the line. Trailing comment delimiter at beginning of next line after comment.
\\"\\"\\"
type foo_SampleResponse {
  sample_id: String
}

\\"\\"\\"
Comment 7: This is a comment with slash followed by two stars at the beginning. The first comment delimiter is not at the beginning of the line.
\\"\\"\\"
input foo_GetSampleRequest_Input {
  \\"\\"\\"
  Comment 8: This is a comment with slash star delimiter on the same line as a field definition.
  \\"\\"\\"
  sample_id: String
}

enum ConnectivityState {
  IDLE
  CONNECTING
  READY
  TRANSIENT_FAILURE
  SHUTDOWN
}

type Mutation {
  \\"\\"\\"Comment 1: This is a comment with two slashes\\"\\"\\"
  foo_SampleService_CreateSample(input: foo_CreateSampleRequest_Input): foo_SampleResponse

  \\"\\"\\"
  Comment 3: This is a comment with initial slash star star and final star slash (all on one line
  \\"\\"\\"
  foo_SampleService_UpdateSample(input: foo_UpdateSampleRequest_Input): foo_SampleResponse

  \\"\\"\\"
  Comment 4: This is a comment on multiple lines, initial slash star star
  at beginning of the line.
  \\"\\"\\"
  foo_SampleService_DeleteSample(input: foo_DeleteSampleRequest_Input): foo_SampleResponse
}

input foo_CreateSampleRequest_Input {
  \\"\\"\\"
  Comment 6: This is a comment with slash followed by two stars at the beginning. The first comment delimiter is at the beginning of the line. Trailing comment delimiter on same line as text.
  \\"\\"\\"
  description: String
  type: String
}

input foo_UpdateSampleRequest_Input {
  \\"\\"\\"
  Comment 10: This is a comment with slash star star delimiter on the same line as a field definition.
  \\"\\"\\"
  sample_id: String
}

input foo_DeleteSampleRequest_Input {
  \\"\\"\\"
  Comment 12: This is a two-slash comment on the same line as a field definition.
  \\"\\"\\"
  sample_id: String
}"
`;

exports[`Interpreting Protos should load the Custom Message proto 1`] = `
"type Query {
  foos_BamService_GetW(input: foos_GetBamRequest_Input): foos_GetFoosResponse
  foos_BamService_connectivityState(tryToConnect: Boolean): ConnectivityState
}

type foos_GetFoosResponse {
  abcd: foos_Bam
}

type foos_Bam {
  id: BigInt
}

\\"\\"\\"
The \`BigInt\` scalar type represents non-fractional signed whole numeric values.
\\"\\"\\"
scalar BigInt

input foos_GetBamRequest_Input {
  id: Int
  abcd: foos_Bam_Input
}

input foos_Bam_Input {
  id: BigInt
}

enum ConnectivityState {
  IDLE
  CONNECTING
  READY
  TRANSIENT_FAILURE
  SHUTDOWN
}"
`;

exports[`Interpreting Protos should load the Custom Message2 proto 1`] = `
"type Query {
  foo_BamService_GetFOOs(input: foo_GetFOOsRequest_Input): foo_GetFOOsResponse
  foo_BamService_connectivityState(tryToConnect: Boolean): ConnectivityState
}

type foo_GetFOOsResponse {
  foos: [foo_FOO]
}

type foo_FOO {
  id: BigInt
}

\\"\\"\\"
The \`BigInt\` scalar type represents non-fractional signed whole numeric values.
\\"\\"\\"
scalar BigInt

input foo_GetFOOsRequest_Input {
  id: Int
}

enum ConnectivityState {
  IDLE
  CONNECTING
  READY
  TRANSIENT_FAILURE
  SHUTDOWN
}"
`;

exports[`Interpreting Protos should load the Empty proto 1`] = `
"type Query {
  \\"\\"\\"get all movies\\"\\"\\"
  io_xtech_Example_GetMovies(input: io_xtech_MovieRequest_Input): io_xtech_MoviesResult
  io_xtech_Example_GetEmpty(input: io_xtech_MovieRequest_Input): io_xtech_EmptyRequest
  io_xtech_Example_connectivityState(tryToConnect: Boolean): ConnectivityState

  \\"\\"\\"get all movies\\"\\"\\"
  io_xtech_AnotherExample_GetMovies(input: io_xtech_MovieRequest_Input): io_xtech_MoviesResult
  io_xtech_AnotherExample_connectivityState(tryToConnect: Boolean): ConnectivityState
}

\\"\\"\\"movie result message, contains list of movies\\"\\"\\"
type io_xtech_MoviesResult {
  \\"\\"\\"list of movies\\"\\"\\"
  result: [io_xtech_Movie]
}

\\"\\"\\"movie message payload\\"\\"\\"
type io_xtech_Movie {
  name: String
  year: Int
  rating: Float

  \\"\\"\\"list of cast\\"\\"\\"
  cast: [String]
  time: google_protobuf_Timestamp
  genre: io_xtech_Genre
}

type google_protobuf_Timestamp {
  seconds: BigInt
  nanos: Int
}

\\"\\"\\"
The \`BigInt\` scalar type represents non-fractional signed whole numeric values.
\\"\\"\\"
scalar BigInt

enum io_xtech_Genre {
  UNSPECIFIED
  ACTION
  DRAMA
}

input io_xtech_MovieRequest_Input {
  movie: io_xtech_Movie_Input
}

\\"\\"\\"movie message payload\\"\\"\\"
input io_xtech_Movie_Input {
  name: String
  year: Int
  rating: Float

  \\"\\"\\"list of cast\\"\\"\\"
  cast: [String]
  time: google_protobuf_Timestamp_Input
  genre: io_xtech_Genre
}

input google_protobuf_Timestamp_Input {
  seconds: BigInt
  nanos: Int
}

scalar io_xtech_EmptyRequest @specifiedBy(url: \\"http://www.ecma-international.org/publications/files/ECMA-ST/ECMA-404.pdf\\")

enum ConnectivityState {
  IDLE
  CONNECTING
  READY
  TRANSIENT_FAILURE
  SHUTDOWN
}

type Subscription {
  \\"\\"\\"search movies by the name of the cast\\"\\"\\"
  io_xtech_Example_SearchMoviesByCast(input: io_xtech_SearchByCastRequest_Input): io_xtech_Movie

  \\"\\"\\"search movies by the name of the cast\\"\\"\\"
  io_xtech_AnotherExample_SearchMoviesByCast(input: io_xtech_SearchByCastRequest_Input): io_xtech_Movie
}

input io_xtech_SearchByCastRequest_Input {
  castName: String
}"
`;

exports[`Interpreting Protos should load the Import Nested proto 1`] = `
"type Query {
  io_xtech_outer_Example_Get(input: io_xtech_TopLevel_Nested_Input): io_xtech_Result
  io_xtech_outer_Example_connectivityState(tryToConnect: Boolean): ConnectivityState
  io_xtech_Example_Get(input: io_xtech_TopLevel_Nested_Input): io_xtech_Result
  io_xtech_Example_connectivityState(tryToConnect: Boolean): ConnectivityState
}

type io_xtech_Result {
  result: [io_xtech_Item]
}

type io_xtech_Item {
  name: String
}

input io_xtech_TopLevel_Nested_Input {
  movie: io_xtech_Item_Input
}

input io_xtech_Item_Input {
  name: String
}

enum ConnectivityState {
  IDLE
  CONNECTING
  READY
  TRANSIENT_FAILURE
  SHUTDOWN
}"
`;

exports[`Interpreting Protos should load the Map proto 1`] = `
"type Query {
  io_xtech_MapService_GetMap(input: io_xtech_MapRequest_Input): io_xtech_MapResponse
  io_xtech_MapService_connectivityState(tryToConnect: Boolean): ConnectivityState
}

type io_xtech_MapResponse {
  map: String
}

input io_xtech_MapRequest_Input {
  map: JSON
}

\\"\\"\\"
The \`JSON\` scalar type represents JSON values as specified by [ECMA-404](http://www.ecma-international.org/publications/files/ECMA-ST/ECMA-404.pdf).
\\"\\"\\"
scalar JSON @specifiedBy(url: \\"http://www.ecma-international.org/publications/files/ECMA-ST/ECMA-404.pdf\\")

enum ConnectivityState {
  IDLE
  CONNECTING
  READY
  TRANSIENT_FAILURE
  SHUTDOWN
}"
`;

exports[`Interpreting Protos should load the Movie proto 1`] = `
"type Query {
  \\"\\"\\"get all movies\\"\\"\\"
  io_xtech_Example_GetMovies(input: io_xtech_MovieRequest_Input): io_xtech_MoviesResult
  io_xtech_Example_connectivityState(tryToConnect: Boolean): ConnectivityState

  \\"\\"\\"get all movies\\"\\"\\"
  io_xtech_AnotherExample_GetMovies(input: io_xtech_MovieRequest_Input): io_xtech_MoviesResult
  io_xtech_AnotherExample_connectivityState(tryToConnect: Boolean): ConnectivityState
}

\\"\\"\\"movie result message, contains list of movies\\"\\"\\"
type io_xtech_MoviesResult {
  \\"\\"\\"list of movies\\"\\"\\"
  result: [io_xtech_Movie]
}

\\"\\"\\"movie message payload\\"\\"\\"
type io_xtech_Movie {
  name: String
  year: Int
  rating: Float

  \\"\\"\\"list of cast\\"\\"\\"
  cast: [String]
  time: google_protobuf_Timestamp
  genre: io_xtech_Genre
}

type google_protobuf_Timestamp {
  seconds: BigInt
  nanos: Int
}

\\"\\"\\"
The \`BigInt\` scalar type represents non-fractional signed whole numeric values.
\\"\\"\\"
scalar BigInt

enum io_xtech_Genre {
  UNSPECIFIED
  ACTION
  DRAMA
}

input io_xtech_MovieRequest_Input {
  movie: io_xtech_Movie_Input
}

\\"\\"\\"movie message payload\\"\\"\\"
input io_xtech_Movie_Input {
  name: String
  year: Int
  rating: Float

  \\"\\"\\"list of cast\\"\\"\\"
  cast: [String]
  time: google_protobuf_Timestamp_Input
  genre: io_xtech_Genre
}

input google_protobuf_Timestamp_Input {
  seconds: BigInt
  nanos: Int
}

enum ConnectivityState {
  IDLE
  CONNECTING
  READY
  TRANSIENT_FAILURE
  SHUTDOWN
}

type Subscription {
  \\"\\"\\"search movies by the name of the cast\\"\\"\\"
  io_xtech_Example_SearchMoviesByCast(input: io_xtech_SearchByCastRequest_Input): io_xtech_Movie

  \\"\\"\\"search movies by the name of the cast\\"\\"\\"
  io_xtech_AnotherExample_SearchMoviesByCast(input: io_xtech_SearchByCastRequest_Input): io_xtech_Movie
}

input io_xtech_SearchByCastRequest_Input {
  castName: String
}"
`;

exports[`Interpreting Protos should load the Nested proto 1`] = `
"type Query {
  io_xtech_Example_Get(input: io_xtech_TopLevel_Nested_Input): io_xtech_Result
  io_xtech_Example_connectivityState(tryToConnect: Boolean): ConnectivityState
}

type io_xtech_Result {
  result: [io_xtech_Item]
}

type io_xtech_Item {
  name: String
}

input io_xtech_TopLevel_Nested_Input {
  movie: io_xtech_Item_Input
}

input io_xtech_Item_Input {
  name: String
}

enum ConnectivityState {
  IDLE
  CONNECTING
  READY
  TRANSIENT_FAILURE
  SHUTDOWN
}"
`;

exports[`Interpreting Protos should load the No Package Nested proto 1`] = `
"type Query {
  Example_Get(input: TopLevel_Nested_Input): Result
  Example_connectivityState(tryToConnect: Boolean): ConnectivityState
}

type Result {
  result: [Item]
}

type Item {
  name: String
}

input TopLevel_Nested_Input {
  movie: Item_Input
}

input Item_Input {
  name: String
}

enum ConnectivityState {
  IDLE
  CONNECTING
  READY
  TRANSIENT_FAILURE
  SHUTDOWN
}"
`;

exports[`Interpreting Protos should load the Outside proto 1`] = `
"type Query {
  io_outside_Example_GetMovies(input: io_outside_MovieRequest_Input): io_outside_MoviesResult
  io_outside_Example_connectivityState(tryToConnect: Boolean): ConnectivityState

  \\"\\"\\"get all movies\\"\\"\\"
  io_xtech_Example_GetMovies(input: io_xtech_MovieRequest_Input): io_xtech_MoviesResult
  io_xtech_Example_connectivityState(tryToConnect: Boolean): ConnectivityState

  \\"\\"\\"get all movies\\"\\"\\"
  io_xtech_AnotherExample_GetMovies(input: io_xtech_MovieRequest_Input): io_xtech_MoviesResult
  io_xtech_AnotherExample_connectivityState(tryToConnect: Boolean): ConnectivityState
}

type io_outside_MoviesResult {
  result: [io_xtech_Movie]
}

\\"\\"\\"movie message payload\\"\\"\\"
type io_xtech_Movie {
  name: String
  year: Int
  rating: Float

  \\"\\"\\"list of cast\\"\\"\\"
  cast: [String]
  time: google_protobuf_Timestamp
  genre: io_xtech_Genre
}

type google_protobuf_Timestamp {
  seconds: BigInt
  nanos: Int
}

\\"\\"\\"
The \`BigInt\` scalar type represents non-fractional signed whole numeric values.
\\"\\"\\"
scalar BigInt

enum io_xtech_Genre {
  UNSPECIFIED
  ACTION
  DRAMA
}

input io_outside_MovieRequest_Input {
  movie: io_xtech_Movie_Input
}

\\"\\"\\"movie message payload\\"\\"\\"
input io_xtech_Movie_Input {
  name: String
  year: Int
  rating: Float

  \\"\\"\\"list of cast\\"\\"\\"
  cast: [String]
  time: google_protobuf_Timestamp_Input
  genre: io_xtech_Genre
}

input google_protobuf_Timestamp_Input {
  seconds: BigInt
  nanos: Int
}

enum ConnectivityState {
  IDLE
  CONNECTING
  READY
  TRANSIENT_FAILURE
  SHUTDOWN
}

\\"\\"\\"movie result message, contains list of movies\\"\\"\\"
type io_xtech_MoviesResult {
  \\"\\"\\"list of movies\\"\\"\\"
  result: [io_xtech_Movie]
}

input io_xtech_MovieRequest_Input {
  movie: io_xtech_Movie_Input
}

type Subscription {
  \\"\\"\\"search movies by the name of the cast\\"\\"\\"
  io_xtech_Example_SearchMoviesByCast(input: io_xtech_SearchByCastRequest_Input): io_xtech_Movie

  \\"\\"\\"search movies by the name of the cast\\"\\"\\"
  io_xtech_AnotherExample_SearchMoviesByCast(input: io_xtech_SearchByCastRequest_Input): io_xtech_Movie
}

input io_xtech_SearchByCastRequest_Input {
  castName: String
}"
`;

exports[`Interpreting Protos should load the With All Values proto 1`] = `
"type Query {
  Example_Get(input: Item_Input): Result
  Example_connectivityState(tryToConnect: Boolean): ConnectivityState
}

type Result {
  result: [Item]
}

type Item {
  boolean: Boolean
  bytesType: Byte
  doubleNum: Float
  fixedint32: Int
  fixedint64: BigInt
  floatNum: Float
  integer32: Int
  integer64: BigInt
  sfixedint32: Int
  sfixedint64: BigInt
  sinteger32: Int
  sinteger64: BigInt
  str: String
  uinteger32: UnsignedInt
  uinteger64: BigInt
}

\\"\\"\\"The \`Byte\` scalar type represents byte value as a Buffer\\"\\"\\"
scalar Byte

\\"\\"\\"
The \`BigInt\` scalar type represents non-fractional signed whole numeric values.
\\"\\"\\"
scalar BigInt

\\"\\"\\"Integers that will have a value of 0 or more.\\"\\"\\"
scalar UnsignedInt

input Item_Input {
  boolean: Boolean
  bytesType: Byte
  doubleNum: Float
  fixedint32: Int
  fixedint64: BigInt
  floatNum: Float
  integer32: Int
  integer64: BigInt
  sfixedint32: Int
  sfixedint64: BigInt
  sinteger32: Int
  sinteger64: BigInt
  str: String
  uinteger32: UnsignedInt
  uinteger64: BigInt
}

enum ConnectivityState {
  IDLE
  CONNECTING
  READY
  TRANSIENT_FAILURE
  SHUTDOWN
}"
`;

exports[`Interpreting Protos should load the With Underscores proto 1`] = `
"type Query {
  \\"\\"\\"get all movies\\"\\"\\"
  io_xtech_Example_GetMovies(input: io_xtech_movie_request_Input): io_xtech_MoviesResult
  io_xtech_Example_connectivityState(tryToConnect: Boolean): ConnectivityState

  \\"\\"\\"get all movies\\"\\"\\"
  io_xtech_AnotherExample_GetMovies(input: io_xtech_movie_request_Input): io_xtech_MoviesResult
  io_xtech_AnotherExample_connectivityState(tryToConnect: Boolean): ConnectivityState
}

\\"\\"\\"movie result message, contains list of movies\\"\\"\\"
type io_xtech_MoviesResult {
  \\"\\"\\"list of movies\\"\\"\\"
  result: [io_xtech_Movie]
}

\\"\\"\\"movie message payload\\"\\"\\"
type io_xtech_Movie {
  name: String
  year: Int
  rating: Float

  \\"\\"\\"list of cast\\"\\"\\"
  cast: [String]
  time: google_protobuf_Timestamp
  genre: io_xtech_Genre
}

type google_protobuf_Timestamp {
  seconds: BigInt
  nanos: Int
}

\\"\\"\\"
The \`BigInt\` scalar type represents non-fractional signed whole numeric values.
\\"\\"\\"
scalar BigInt

enum io_xtech_Genre {
  UNSPECIFIED
  ACTION
  DRAMA
}

input io_xtech_movie_request_Input {
  movie: io_xtech_Movie_Input
}

\\"\\"\\"movie message payload\\"\\"\\"
input io_xtech_Movie_Input {
  name: String
  year: Int
  rating: Float

  \\"\\"\\"list of cast\\"\\"\\"
  cast: [String]
  time: google_protobuf_Timestamp_Input
  genre: io_xtech_Genre
}

input google_protobuf_Timestamp_Input {
  seconds: BigInt
  nanos: Int
}

enum ConnectivityState {
  IDLE
  CONNECTING
  READY
  TRANSIENT_FAILURE
  SHUTDOWN
}

type Subscription {
  \\"\\"\\"search movies by the name of the cast\\"\\"\\"
  io_xtech_Example_SearchMoviesByCast(input: io_xtech_SearchByCastRequest_Input): io_xtech_Movie

  \\"\\"\\"search movies by the name of the cast\\"\\"\\"
  io_xtech_AnotherExample_SearchMoviesByCast(input: io_xtech_SearchByCastRequest_Input): io_xtech_Movie
}

input io_xtech_SearchByCastRequest_Input {
  castName: String
}"
`;

exports[`Load proto with prefixQueryMethod should load the retrieve-movie.proto 1`] = `
"type Query {
  \\"\\"\\"get all movies\\"\\"\\"
  io_xtech_Example_GetMovies(input: io_xtech_movie_request_Input): io_xtech_MoviesResult

  \\"\\"\\"get movies\\"\\"\\"
  io_xtech_Example_RetrieveMovies(input: io_xtech_movie_request_by_ids_Input): io_xtech_MoviesResult
  io_xtech_Example_connectivityState(tryToConnect: Boolean): ConnectivityState

  \\"\\"\\"get all movies\\"\\"\\"
  io_xtech_AnotherExample_GetMovies(input: io_xtech_movie_request_Input): io_xtech_MoviesResult

  \\"\\"\\"get movies\\"\\"\\"
  io_xtech_AnotherExample_RetrieveMovies(input: io_xtech_movie_request_by_ids_Input): io_xtech_MoviesResult
  io_xtech_AnotherExample_connectivityState(tryToConnect: Boolean): ConnectivityState
}

\\"\\"\\"movie result message, contains list of movies\\"\\"\\"
type io_xtech_MoviesResult {
  \\"\\"\\"list of movies\\"\\"\\"
  result: [io_xtech_Movie]
}

\\"\\"\\"movie message payload\\"\\"\\"
type io_xtech_Movie {
  name: String
  year: Int
  rating: Float

  \\"\\"\\"list of cast\\"\\"\\"
  cast: [String]
  time: google_protobuf_Timestamp
  genre: io_xtech_Genre
}

type google_protobuf_Timestamp {
  seconds: BigInt
  nanos: Int
}

\\"\\"\\"
The \`BigInt\` scalar type represents non-fractional signed whole numeric values.
\\"\\"\\"
scalar BigInt

enum io_xtech_Genre {
  UNSPECIFIED
  ACTION
  DRAMA
}

input io_xtech_movie_request_Input {
  movie: io_xtech_Movie_Input
}

\\"\\"\\"movie message payload\\"\\"\\"
input io_xtech_Movie_Input {
  name: String
  year: Int
  rating: Float

  \\"\\"\\"list of cast\\"\\"\\"
  cast: [String]
  time: google_protobuf_Timestamp_Input
  genre: io_xtech_Genre
}

input google_protobuf_Timestamp_Input {
  seconds: BigInt
  nanos: Int
}

input io_xtech_movie_request_by_ids_Input {
  movieIds: [String]
}

enum ConnectivityState {
  IDLE
  CONNECTING
  READY
  TRANSIENT_FAILURE
  SHUTDOWN
}

type Subscription {
  \\"\\"\\"search movies by the name of the cast\\"\\"\\"
  io_xtech_Example_SearchMoviesByCast(input: io_xtech_SearchByCastRequest_Input): io_xtech_Movie

  \\"\\"\\"search movies by the name of the cast\\"\\"\\"
  io_xtech_AnotherExample_SearchMoviesByCast(input: io_xtech_SearchByCastRequest_Input): io_xtech_Movie
}

input io_xtech_SearchByCastRequest_Input {
  castName: String
}"
`;
